--- a/alunos/joaosilva.html
+++ b/alunos/joaosilva.html
@@ -39,7 +39,7 @@
         <p>Olá! Meu nome é João Silva. Sou estudante dedicado, apaixonado por tecnologia e sempre em busca de novos conhecimentos.</p>
         <div class="info">
             <p><strong>Idade:</strong> 20 anos</p>
-            <p><strong>Curso:</strong> Ciência da Computação</p>
+            <p><strong>Curso:</strong> Análise e Desenvolvimento de Sistemas</p>
             <p><strong>Interesses:</strong> Programação, Inteligência Artificial, Jogos Digitais</p>
             <p><strong>Email:</strong> joao.silva@email.com</p>
         </div>
