--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h1>Lista de alunos</h1>
     <div id="lista">
         <ul>
-            <li><a href="./alunos/joaosilva.html">joaosilva.html</a></li>
+            <li><a href="alunos/joaosilva.html">joaosilva.html</a></li>
         </ul>
     </div>
 </body>
